QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Delay window positioning at startup option is now being disabled,
  on the Setup/Misc tab, when Minimize to system tray is enabled.

- Cosmetic fix: Setup/Settings tab, 'Input Device' text label was
  using a slightly smaller font than the rest of the application
  (bug#1872545, reported by Jouni Rinne).


0.3.2  2007-12-20  Patchbay heads-up with season greetings.

- Patchbay port matching has been slightly extended, this time
  allowing for the multiple or as many-to-many connections between
  socket plugs, provided these are specified in proper regex form
  (after a patch proposed by Dave Moore, thanks).

- A new option to start the program minimized when the system tray
  icon is enabled, is now available from Setup/Misc/Start minimized
  to system tray (as kindly suggested by Marc-Olivier Barre).

- Regression from QSystemTrayIcon (Qt4 >= 4.2) implementation, at
  least on X11 environments: while the main application widget was
  minimized to the system-tray, closing any other top-level widget
  was causing the immediate and unexpected application shutdown.

- Some portaudio backend settings are now being enabled, specially
  suited for the jackdmp flavouring.

- Server mode display blinking, usually shown as the RT indicator,
  is now an option (Setup/Display/Blink server mode indicator when
  started). 

- Tool/child windows position and size preservation fixed.

- The connections/patchbay auto-refresh option has been finally
  removed due to several user requests, although deprecated for
  quite some time now it has been the probable cause of some
  periodic xrun occurrences due to graph-locking in jackd (while
  making Geoff Beasley angry in the process:).

- Messages line limit was not being checked, now honored.

- Simple as it could ever be, the build executive summary report
  is now given on configure.
