@@ -112,27 +112,26 @@ Thanks a lot Fernando!
 Here are some people who helped this project in one way or another,
 and in fair and strict alphabetic order:
 
-    Alexandre Prokoudine                Kasper Souren
-    Andreas Persson                     Kjetil Matheussen
-    Austin Acton                        Ken Ellinwood
-    Ben Powers                          Lawrie Abbott
-    Chris Cannam                        Lee Revell
-    Dan Nigrin                          Lucas Brasilino
-	Dave Moore                          Marc-Olivier Barre
-    Dave Phillips                       Mark Knecht
-    Dirk Jagdmann                       Matthias Nagorni
-    Dominic Sacre                       Melanie
-    Fernando Pablo Lopez-Lezcano        Orm Finnendahl
-    Filipe Tomas                        Paul Davis
-    Florian Schmidt                     Robert Jonsson
-    Fons Adriaensen                     Sampo Savolainen
-    Geoff Beasley                       Stephane Letz
-    Jack O'Quin                         Steve Harris
+    Alexandre Prokoudine                Karsten Wiese
+    Andreas Persson                     Kasper Souren
+    Austin Acton                        Kjetil Matheussen
+    Ben Powers                          Ken Ellinwood
+    Chris Cannam                        Lawrie Abbott
+    Dan Nigrin                          Lee Revell
+	Dave Moore                          Lucas Brasilino
+    Dave Phillips                       Marc-Olivier Barre
+    Dirk Jagdmann                       Mark Knecht
+    Dominic Sacre                       Matthias Nagorni
+    Fernando Pablo Lopez-Lezcano        Melanie
+    Filipe Tomas                        Orm Finnendahl
+    Florian Schmidt                     Paul Davis
+    Fons Adriaensen                     Robert Jonsson
+    Geoff Beasley                       Sampo Savolainen
+    Jack O'Quin                         Stephane Letz
+    Jacob Meuser                        Steve Harris
     Jesse Chappell                      Taybin Rutkin
     Joachim Deguara                     Wilfried Huss
     Jussi Laako                         Wolfgang Woehl
-    Karsten Wiese
-
 
 Thanks to you all.
 --
